# pictl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pictl/: __init__.py
pictl/cli/: __init__.py  main.py
pictl/config/: __init__.py  config.py  regions.py
pictl/pic/: __init__.py  pic.py
pictl/upload/: __init__.py  upload.py
pictl/utils/: __init__.py  utils.py
